[workspace]
resolver = "2"
members = [
    "crates/feoblog",
    "crates/feoblog_leptos",
    "crates/sizedisplay",
]

[workspace.dependencies]

leptos = "0.5"
leptos_meta = "0.5"
leptos_actix = "0.5"
leptos_router = "0.5"
wasm-bindgen = "=0.2.89"


[[workspace.metadata.leptos]]
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "leptos/styles/main.scss"
assets-dir = "leptos/assets"

# TODO: Respect these when running?
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"

bin-package = "feoblog"
bin-features = ["ssr"]
bin-default-features = true
# bin-cargo-args = [
#     "--",
#     "serve",
#     "--help",
# ]
# bin-cargo-args = "-- serve --help"

lib-package = "feoblog_leptos"
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
