[workspace]
resolver = "2"
members = [ "crates/feo_client",
    "crates/feoblog",
    "crates/leptos_app",
    "crates/leptos_app_hydrate", "crates/protobufs",
    "crates/sizedisplay",
]

[workspace.dependencies]

console_error_panic_hook = "0.1.7"
leptos = "0.5"
leptos_meta = "0.5"
leptos_actix = "0.5"
leptos_router = "0.5"
wasm-bindgen = "=0.2.89"


[[workspace.metadata.leptos]]
name = "feoblog"

site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "leptos/styles/main.scss"
assets-dir = "leptos/assets"

# TODO: Respect these when running for `cargo leptos watch`.
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"

bin-package = "feoblog"
bin-features = ["ssr"]
bin-default-features = false

lib-package = "leptos_app_hydrate"
lib-default-features = false
lib-profile-release = "wasm-release"


# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

