[package]
name = "feo_client"
version = "0.1.0"
edition = "2021"


[dependencies]

protobufs.path = "../protobufs"
protobufs.features = ["with-serde"]

anyhow = "*"
reqwest = "*"
thiserror = "*"

# No support for WASM. Deprecated Sep. 2022. 
# sodiumoxide = "*"

dryoc = "*"

bs58 = { version = "*", features = ["check"] }
serde = { version = "*", features = [ "derive" ] }
serde_with = { version = "*", features = ["macros"] }


[dev-dependencies]
tokio.version = "*"
tokio.features = ["rt", "macros"]