[package]
name = "feoblog"
version = "0.7.0-rc8"
authors = ["Cody Casterline <cody.casterline@gmail.com>"]
edition = "2018"

description = "A distributed social network. Think Tumblr but open-source."
keywords = ["social", "network", "distributed"]

[[bin]]
name = "feoblog"

[dependencies]
# Web:
actix-web = "4"
actix-web-codegen = "*"
# required for reading Actix Payloads:
futures = "*"

# Error handling:
anyhow = "*"

# CLI: 
structopt = "0.3.17"
webbrowser = "0.8.3"

multihash = "0.18"
rust-base58 = "*"
bs58 = { version = "*", features = ["check"] }

# crypto:
sodiumoxide = "*"

# Markdown:
# Comrak is safe by default:
comrak = "0.16"

# Allow embedding local files. 
rust-embed = { version = "6.4.2", features = ["compression"] }
# ... and serving those files w/ the right mime types.
mime_guess = "2"



# Used to make Traits that have async functions which can be used as response
# objects with actix-web
async-trait = "*"

# Required fix for soft_unstable rustfmt::skip (as of Rust 1.52).
# See: https://github.com/stepancheg/rust-protobuf/issues/551
protobuf = "^2.22.1"
time = "0.2.23"

# Used to deserialize strings in URL paths.
serde = "*"

# connection pooling for rusqlite:
r2d2 = "*"
r2d2_sqlite = "*"

log = "*"
env_logger = "*"
logging_timer = "*"

# To work around https://github.com/actix/actix-web/issues/1913
socket2 = "0.4"

# A nice library for getting blocking I/O out of the main thread(s)
blocking = "*"

tempfile = "*"

tablestream = "0.1.3"

# Suggested workaround for actix4 from: https://github.com/djc/askama/issues/586
askama = { git = "https://github.com/djc/askama", branch = "main" }
askama_actix = { git = "https://github.com/djc/askama", branch = "main"}

# Leptos SSR!
leptos = { version = "0.5", features = ["ssr"] }
leptos_meta = { version = "0.5", features = ["ssr"] }
leptos_router = { version = "0.5", features = ["ssr"] }
leptos_actix = { version = "0.5" }
wasm-bindgen = "=0.2.89"


### Security updates ###
# These are not directly needed, but we need to bump up versions used by our 
# dependencies to avoid security issues in older versions:
smallvec = "0.6.14"
generic-array = "0.12.4"

### Dependency updates ###
# Some dependencies need *their* dependencies versions bumped:
# See: https://github.com/pyrossh/rust-embed/issues/206
walkdir = "2.3.2"


[dependencies.identicon]
git = "https://github.com/NfNitLoop/identicon"
rev = "dcee725b1d72088128a396d9d84a684434b77012"
default-features = false

[dependencies.rusqlite]
# TODO: Switch to sqlx for async sql support?
version = "0.24"
features = [
    # Use a bundled, statically-linked version of sqlite. (Simplifies building on Windows)
    "bundled",
    # Enable extra BLOB APIs for streaming large BLOBs:
    "blob",
]



[dependencies.sizedisplay]
path = "../sizedisplay"

[build-dependencies]
# Generate rust from .proto files.
protoc-rust = "2"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  # "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
