[package]
name = "leptos_app"
version = "0.1.0"
edition = "2021"


[dependencies]
leptos.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true

feo_client.path = "../feo_client"

# For WASM builds:
[lib]
crate-type = [
    "cdylib",
    "rlib"
]

[features]
ssr = []
csr = []
hydrate = [
    "leptos_router/hydrate",
    "leptos_meta/hydrate",
]