[package]
name = "leptos_app_hydrate"
version = "0.1.0"
edition = "2021"


[dependencies]
console_error_panic_hook.workspace = true
leptos.workspace = true
leptos.features = [ "hydrate" ]
leptos_router.workspace = true
wasm-bindgen.workspace = true

leptos_app.path = "../leptos_app"
leptos_app.features = [
    "hydrate"
]

# For WASM builds:
[lib]
crate-type = [
    "cdylib",
    "rlib"
]
