[package]
name = "protobufs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required fix for soft_unstable rustfmt::skip (as of Rust 1.52).
# See: https://github.com/stepancheg/rust-protobuf/issues/551
protobuf = "^2.22.1"


[build-dependencies]
# Generate rust from .proto files.
protoc-rust = "2"
